--- a/guias/instalar_git/instalar_git.tex
+++ b/guias/instalar_git/instalar_git.tex
@@ -181,7 +181,7 @@ ssh-keygen -t ed25519 -C "your_email@example.com"
         \caption{Acceder a la configuración de Github}
     \end{figure}
 
-    Luego, accede a la sección de las claves shh.
+    Luego, accede a la sección de las claves ssh.
     \begin{figure}[H]
         \centering
         \includegraphics[width=0.3\textwidth]{./static/github_2.png}
